# displayctl

./: .gitignore  PKGBUILD  README.md  displayctl.desktop  pyproject.toml
src/displayctl/: __init__.py  __main__.py  app.py  backend.py  canvas.py  model.py  profiles.py  settings_panel.py  snap.py  window.py
